- introduced parent pom - Add rubics cube solver - Using java 21